Fix telegram icon and socal icons alignment

--- a/src/sass/components/_socials.sass
+++ b/src/sass/components/_socials.sass
@@ -9,6 +9,9 @@
 	align-items: center
 
 .socials__item
+ display: flex
+ justify-content: center
+ align-items: center
 	margin-left: 25px
 	width: 22px
 	height: 22px
@@ -17,10 +20,12 @@
 	&:first-child
 		margin-left: 0
 
-	&.telegram__item
-		svg
-			margin-top: -3px
+.socials__link
+ display: flex
+ justify-content: center
+ align-items: center
+ width: inherit
+ height: inherit
 
-	&.youtube__icon, &.twitter__icon
-		svg
-			margin-top: 3px
+ svg
+  width: inherit
